--- a/src/BlogBundle/Resources/views/Blog/view.html.twig
+++ b/src/BlogBundle/Resources/views/Blog/view.html.twig
@@ -1,8 +1,12 @@
-{% extends "::base.html.twig" %}
-{%  block body %}
-<div class="page_title" id="page_title">
-    <h1>{{ blog.title }}</h1>
-</div>
+{% extends "BlogBundle::layout.html.twig" %}
+{% block page_title %}
+<h1>{{ blog.title }}</h1>
+{% endblock %}
+
+
+
+{%  block content %}
+
     <article>
         <div class="container blog_container">
             <div class="field field-body">
